// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/Login/LoginLayout render ui snap 1`] = `
<body>
  <div>
    <section
      class="css-1zkush"
    >
      <div
        class="css-9y19rd"
      >
        <div
          class="banner"
        >
          <img
            alt="left_bg"
            class="login-background-img"
            src="/static/image/login-left-bg.png"
          />
        </div>
      </div>
      <div
        class="css-1gefj4"
      >
        <div
          class="login-page-right-content"
        >
          <div
            class="content-header"
          >
            <div
              class="logo"
            >
              <img
                alt="logo_img"
                src="/logo.png"
              />
            </div>
            <div
              class="title"
            >
              <span
                class="label label-base"
              />
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;

exports[`page/Login/LoginLayout render ui snap redux has data 1`] = `
<body>
  <div>
    <section
      class="css-1zkush"
    >
      <div
        class="css-9y19rd"
      >
        <div
          class="banner"
        >
          <img
            alt="left_bg"
            class="login-background-img"
            src="/static/image/login-left-bg.png"
          />
        </div>
      </div>
      <div
        class="css-1gefj4"
      >
        <div
          class="login-page-right-content"
        >
          <div
            class="content-header"
          >
            <div
              class="logo"
            >
              <img
                alt="logo_img"
                src="default-url"
              />
            </div>
            <div
              class="title"
            >
              <span
                class="label label-base"
              >
                DMS-Base Title
              </span>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</body>
`;
